--- a/Home.html
+++ b/Home.html
@@ -6,11 +6,9 @@
     <title>Home</title>
      
 <!-- Tab links -->
-<div class="tab">
-<button class="tablinks" onclick="openCity(event,'Home')">Home</button>
-<button class="tablinks" onclick="openCity(event,'Prodcucts')">Product</button>
-<button class="tablinks" onclick="openCity(event,'About us')">About us</button>            
-</div>
+<button onclick="window.location.href = 'Home.html';">Home</button>
+<button onclick="window.location.href = 'Products.html';">Products</button>
+<button onclick="window.location.href = 'About us.html';">About us</button>
 
 <!-- Tab content -->
 <div id="Home" class="tabcontent">
@@ -18,7 +16,7 @@
     </div>   
     
     <div id="Products" class="tabcontent">
-    <a href="Prodcuts.html">Product</a>
+    <a href="Products.html">Products</a>
     </div>
   
     <div id="About us" class="tabcontent">
