--- a/Prodcuts.html
+++ b/Prodcuts.html
@@ -6,19 +6,17 @@
     <title>Products</title>
    
 <!-- Tab links -->
-<div class="tab">
-<button class="tablinks" onclick="openCity(event,'Home')">Home</button>
-<button class="tablinks" onclick="openCity(event,'Prodcucts')">Product</button>
-<button class="tablinks" onclick="openCity(event,'About us')">About us</button>   
-</div>
+<button onclick="window.location.href = 'Home.html';">Home</button>
+<button onclick="window.location.href = 'Products.html';">Products</button>
+<button onclick="window.location.href = 'About us.html';">About us</button>
 
 <!-- Tab content -->
 <div id="Home" class="tabcontent">
      <a href="Home.html">Home</a> 
      </div>   
      
-     <div id="Product" class="tabcontent">
-     <a href="Prodcuts.html">Product</a>
+     <div id="Products" class="tabcontent">
+     <a href="Products.html">Products</a>
      </div>
    
      <div id="About us" class="tabcontent">
